@@ -4,7 +4,7 @@ Feature: Division
   Cashiers must be able to calculate a fraction
 
   Scenario: Regular numbers
-    Given I have entered 3 into the calculator
-    And I have entered 2 into the calculator
-    When I press divide
-    Then the result should be 1.5 on the screen
+    * I have entered 3 into the calculator
+    * I have entered 2 into the calculator
+    * I press divide
+    * the result should be 1.5 on the screen
